--- a/RPS/Properties/launchSettings.json
+++ b/RPS/Properties/launchSettings.json
@@ -17,11 +17,10 @@
     },
     "RPS": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:9000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:59947/"
     }
   }
 }
